--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 using jupyter/.ipynb_checkpoints/using_jupyter_(good)-checkpoint.ipynb
 using jupyter/.ipynb_checkpoints/using_jupyter_(need)-checkpoint.ipynb
+using jupyter , exercises/.ipynb_checkpoints/using_jupyter_(need),_exercises-checkpoint.ipynb
