--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ using jupyter/.ipynb_checkpoints/using_jupyter_(need)-checkpoint.ipynb
 using jupyter , exercises/.ipynb_checkpoints/using_jupyter_(need),_exercises-checkpoint.ipynb
 using jupyter , exercises/.ipynb_checkpoints/using_jupyter_(good),_exercises-checkpoint.ipynb
 fundamentals/.ipynb_checkpoints/fundamentals_(need)-checkpoint.ipynb
+fundamentals  exercises/.ipynb_checkpoints/fundamentals_(need)_exercises-checkpoint.ipynb
