--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ using jupyter , exercises/.ipynb_checkpoints/using_jupyter_(need),_exercises-che
 using jupyter , exercises/.ipynb_checkpoints/using_jupyter_(good),_exercises-checkpoint.ipynb
 fundamentals/.ipynb_checkpoints/fundamentals_(need)-checkpoint.ipynb
 fundamentals  exercises/.ipynb_checkpoints/fundamentals_(need)_exercises-checkpoint.ipynb
+fundamentals  exercises/.ipynb_checkpoints/fundamentals_(good)_exercises-checkpoint.ipynb
+fundamentals/.ipynb_checkpoints/fundamentals_(good)-checkpoint.ipynb
